Modification of sections 6.1-2

--- a/part/distributed.tex
+++ b/part/distributed.tex
@@ -1,19 +1,21 @@
 \section{Защита данных в распределенных системах}
+
+Существует два основных варианта организации базы данных в локальной сети.
+
+Первый вариант – системы распределенной обработки данных. Централизованная БД расположена на одной машине (сервере). К ней осуществляется параллельный доступ нескольких пользователей и приложений, находящихся на рабочих станциях, объединенных в вычислительную сеть. Централизованная организация данных позволяет облегчить обеспечение безопасности, целостности и непротиворечивости данных.
+
+Второй вариант – системы распределенных баз данных. БД распределена на нескольких компьютерах, объединенных в сеть. К БД возможен параллельный доступ нескольких пользователей и приложений, расположенных в узлах сети. \autocite{Sergeeva}
+
+В данном разделе мы рассмотрим основные аспекты и методы защиты данных в распределенных системах, учитывая специфику каждого из описанных выше подходов.
+
 \subsection{Распределенные вычислительные среды}
-Распределённая обработка данных - методика выполнения прикладных программ группой систем.
-При этом пользователь получает возможность работать с сетевыми службами и прикладными процессами,
-расположенными в нескольких взаимосвязанных абонентских системах. \autocite{Sergeeva}
 
-\paragraph{
-    Распределенная обработка информации в среде клиент-сервер.
-    Концепция распределенной вычислительной среды Distributed Computing Environment (DCE).
-    Распределенные базы данных в сетях ЭВМ
-} ~\\
+\textbf{Распределенная обработка информации в среде клиент-сервер.
+Концепция распределенной вычислительной среды Distributed Computing Environment (DCE).
+Распределенные базы данных в сетях ЭВМ}
 
-Компьютер (или программу), управляющий ресурсом, называют сервером этого ресурса (файлсервер, сервер базы данных,
-вычислительный сервер...). Клиент и сервер какого-либо ресурса могут находиться как в рамках одной вычислительной системы,
-так и на различных компьютерах, связанных сетью. Основной принцип технологии "клиент-сервер" заключается в разделении
-функций приложения на три группы \autocite{4studClntSrv}:
+Архитектура «клиент-сервер» подразумевает разделение функций между компонентами, которые могут выполняться на различных сетевых узлах.
+Разделение функций приложения на три группы \autocite{4studClntSrv}:
 \begin{itemize}
     \item ввод и отображение данных (взаимодействие с пользователем);
     \item прикладные функции, характерные для данной предметной области;
@@ -30,128 +32,57 @@
 Связь между компонентами осуществляется по определенным правилам, которые называют "протокол взаимодействия".
 Каждый из компонентов приложения при этом может работать на выделенном сервере (узле) или разделять ресурсы сервера
 с другими компонентами приложения. В связи с этим можно выделить следующие модели приложений:
-\begin{itemize}
-    \item двухзвенная модель (модель «клиент-сервер»)
-    \item трехзвенная модель (модель сервера приложений)
-    \item многозвенная модель
+
+\begin{itemize} 
+    \item \textbf{Двухзвенная модель} — разделение функций между двумя узлами. 
+    \item \textbf{Трехзвенная модель} — выделение для каждого из трех компонентов приложения своего сервера. 
+    \item \textbf{Многозвенная модель} — распределение функциональных компонентов по нескольким серверам и узлам сети. \autocite{Tanenbaum}
 \end{itemize}
 
-\textbf{Двухзвенная модель} позволяет распределить различным образом три компонента приложения между двумя узлами 
-\textbf{Трехзвенная модель} предполагает выделение для каждого из трех компонентов приложения свой сервер \autocite{4studClntSrv}.
-\textbf{Многозвенная модель} позволяет отдельным компонентам использовать ресурсы нескольких серверов, например,
-распределенные базы данных. Компанией Gartner Group, специализирующейся в области исследования информационных технологий,
-предложена следующая классификация двухзвенных моделей взаимодействия клиент-сервер \autocite{bmstu}
+\textbf{Двухзвенная структура}~\\
 
-\begin{figure}[h!]
-    \centering
-    \includegraphics[width=0.8\textwidth]{assets/dce.jpg}
-    \caption{Классификация двухзвенных моделей}
-\end{figure}
+Двухзвенная архитектура используется в клиент-серверных системах, где сервер отвечает
+на клиентские запросы напрямую и в полном объеме, при этом используя только
+собственные ресурсы. Т.е. сервер не вызывает сторонние сетевые приложения и не
+обращается к сторонним ресурсам для выполнения какой-либо части запроса. 
+Клиентская программа работает с данными через запросы к серверному ПО. Базовые функции приложения разделены между клиентом и сервером.
 
-\subsubsection{Двухзвенная структура}~\\
-В любой сети, построенной на современных сетевых технологиях, присутствуют элементы
-клиент-серверного взаимодействия,часто на основе двухзвенной архитектуры.
-
-\begin{figure}[h!]
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{assets/662}
     \caption{Двухзвенная архитектура}
 \end{figure}
 
-Двухзвенная архитектура используется в клиент-серверных системах, где сервер отвечает
-на клиентские запросы напрямую и в полном объеме, при этом используя только
-собственные ресурсы. Т.е. сервер не вызывает сторонние сетевые приложения и не
-обращается к сторонним ресурсам для выполнения какой-либо части запроса.
-
-\begin{figure}[h!]
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{assets/663}
     \caption{Типичный пример двухзвенной модели}
 \end{figure}~\\
 
-Клиентская программа работает с данными через запросы к серверному ПО. Базовые
-функции приложения разделены между клиентом и сервером.
+\textbf{Трехзвенная архитектура}~\\
 
-Плюсы:
-\begin{itemize}
-    \item Отсутствие дублирования кода программы-сервера программами-клиентами.
-    \item Так как все вычисления выполняются на сервере, то требования к компьютерам, на которых установлен клиент, снижаются.
-    \item Все данные хранятся на сервере, который, как правило, защищён гораздо лучше большинства клиентов. На сервере проще обеспечить контроль полномочий, чтобы разрешать доступ к данным только клиентам с соответствующими правами доступа.
-    \item Позволяет объединить различные клиенты. Использовать ресурсы одного сервера часто могут клиенты с разными аппаратными платформами, операционными системами и т. п.
-    \item Позволяет разгрузить сети за счёт того, что между сервером и клиентом передаются небольшие порции данных.
-\end{itemize}
-
-Минусы:
-\begin{itemize}
-    \item 	Бизнес логика приложений осталась в клиентском ПО. При любом изменении алгоритмов, надо обновлять пользовательское ПО на каждом клиенте.
-    \item Высокие требования к пропускной способности коммуникационных каналов с сервером, что препятствует использование клиентских станций иначе как в локальной сети.
-    \item Слабая защита данных от взлома, в особенности от недобросовестных пользователей системы.
-    \item Высокая сложность администрирования и настройки рабочих мест пользователей системы.
-    \item Необходимость использовать мощные ПК на клиентских местах.
-    \item Высокая сложность разработки системы из-за необходимости выполнять бизнес-логику и обеспечивать пользовательский интерфейс в одной программе.
-\end{itemize}
-
-\subsubsection{Трехзвенная архитектура}~\\
-
-Еще одна тенденция в клиент-серверных технологиях связана со все большим
-использованием распределенных вычислений. Они реализуются на основе модели сервера
-приложений, где сетевое приложение разделено на две и более частей, каждая из которых
+Модель сервера приложений, где сетевое приложение разделено на две и более частей, каждая из которых
 может выполняться на отдельном компьютере. Выделенные части приложения
 взаимодействуют друг с другом, обмениваясь сообщениями в заранее согласованном
 формате. В этом случае двухзвенная клиент-серверная архитектура становится
-трехзвенной.  На этой архитектуре построены большинство современных web-приложений.~\\
-
-\begin{figure}[h!]
-    \centering
-    \includegraphics[width=0.8\textwidth]{assets/664}
-    \caption{Трехзвенная архитектура}
-\end{figure}
+трехзвенной. ~\\
 
 Основным ее отличием от предыдущей архитектуры является физическое разделение
-программ, отвечающих за хранение данных (СУБД) от программ эти данные
-обрабатывающих. Такое разделение программных компонент позволяет оптимизировать
+программ, отвечающих за хранение данных (СУБД) от программ, 
+обрабатывающих эти данные. Такое разделение программных компонент позволяет оптимизировать
 нагрузки как на сетевое, так и на вычислительное оборудование комплекса.~\\
 
-\begin{figure}[h!]
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{assets/665}
     \caption{Типичный пример трехзвенной модели}
 \end{figure}
 
-Компоненты трехзвенной архитектуры, с точки зрения программного обеспечения
-реализуют определенные сервера БД, web-сервера и браузеры. Место любого из этих
-компонентов может занять программное обеспечение любого производителя.~\\
-
-Сервер приложений располагается на выделенном сервере приложений, выполняющем функции промежуточного ПО.~\\
-
-Плюсы:
-\begin{itemize}
-    \item Тонкий клиент.
-    \item Между клиентской программой и сервером приложения передается лишь минимально необходимый поток данных - аргументы вызываемых функций и возвращаемые от них значения.
-    \item Сервер приложения может быть запущен в одном или нескольких экземплярах на одном или нескольких компьютерах.
-    \item Дешевый трафик между сервером приложений и СУБД. Трафик между сервером приложений и СУБД может быть большим, однако это всегда трафик локальной сети, а их пропускная способность достаточно велика и дешева. В крайнем случае, всегда можно запустить СП и СУБД на одной машине, что автоматически сведет сетевой трафик к нулю.
-    \item Дешевле наращивать функциональность и обновлять ПО.
-\end{itemize}
-
-Минусы:
-\begin{itemize}
-    \item Более высокая сложность создания приложений.
-    \item Сложнее в разворачивании и администрировании.
-    \item Высокие требования к производительности серверов приложений и сервера базы данных, а, значит, и высокая стоимость серверного оборудования.
-    \item Высокие требования к скорости канала (сети) между сервером базы данных и серверами приложений.
-\end{itemize}
-
-\subparagraph{Отличия}~\\
-
-По сравнению с двухзвенной клиент-серверной архитектурой трёхуровневая архитектура
-обеспечивает, как правило, большую масштабируемость (за счёт горизонтальной
-масштабируемости сервера приложений и мультиплексирования соединений), большую
-конфигурируемость (за счёт изолированности уровней друг от друга). Реализация
-приложений, доступных из веб-браузера или из тонкого клиента, как правило,
-подразумевает развёртывание программного комплекса в трёхуровневой архитектуре. При
-этом обычно разработка трёхзвенных программных комплексов сложнее, чем для
-двухзвенных, также наличие дополнительного связующего программного обеспечения
-может налагать дополнительные издержки в администрировании таких комплексов.~\\
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{assets/664}
+    \caption{Трехзвенная архитектура}
+\end{figure}
 
 DCE (Distributed Computing Environment)~--- это система программного обеспечения,
 предназначенная для разработки программ, использующих распределённые вычисления. \autocite{dce}
@@ -160,7 +91,7 @@ DCE (Distributed Computing Environment)~--- это система програм
     \item Удалённый вызов процедур (RPC, remote procedure call)~--- DCE имеет собственную систему RPC (DCE/RPC). Как и любой RPC, используется для вызова процедур на удалённом компьютере.
     \item Служба каталогов (Directory Service)~--- центральное хранилище информации о ресурсах в распределённой системе. К ним относятся пользователи, компьютера и службы RPC, а также их атрибуты (свойства).
     \item Служба безопасности (Security Service)~--- служба, отвечающая за защиту данных при передаче по сети (с помощью шифрования, например), контроль доступа к вычислительным ресурсам, и т. д.
-    \item Служба синхронизации времени (Time Service)~--- как понятно из названия, используются для синхронизации времени на узлах системы.
+    \item Служба синхронизации времени (Time Service)~--- используются для синхронизации времени на узлах системы.
     \item Файловая служба (File Service)~--- позволяет пользователям получать доступ к файлам, хранящимся на файловом сервере.
     \item Threads~--- реализует многопоточность, если она не реализована на уровне ОС.
 \end{itemize}
@@ -175,145 +106,101 @@ DCE (Distributed Computing Environment)~--- это система програм
 Распределённая БД тоже может поддерживать репликацию.
 
 Преимущества распределённых БД \autocite{DDBMSIndusEdition}:
+
 \begin{itemize}
-    \item Для расширения нужно добавить новый компьютер, а не менять существующую систему.
-    \item При отказе одного узла остальные продолжают работать.
-    \item Если эффективно распределить данные, можно снизить время ожидания для пользователя и затраты на связь с БД.
+    \item Распределение вычислительной нагрузки между серверами
+    \item Параллельное выполнение запросов на нескольких узлах
+    \item Сохранение работоспособности системы даже при отказе отдельных узлов
+    \item Возможность постепенного наращивания мощности за счет добавления новых узлов  
 \end{itemize}
 
-Недостатки~--- более сложное управление всей системой и накладные расходы на передачу данных.
+Недостатки:
 
+\begin{itemize}
+        \item Сложность проектирования и реализации распределенной архитектуры
+        \item Требуется специализированное программное обеспечение для управления распределенной БД
+        \item Новые угрозы при передаче через коммуникационные сети
+        \item Обеспечение распределенной согласованности транзакций требует использования сложных протоколов
+        \item Проблемы с целостностью при сбоях в сети или отдельных узлах
+        \item Дополнительная нагрузка на систему из-за процессов синхронизации
+        \item Потребность в надежных каналах связи между узлами
+\end{itemize}
 
 \subsection{Угрозы безопасности распределенных СУБД}
+
 \paragraph{Угрозы доступности, целостности и конфиденциальности данных. Механизмы противодействия} ~\\
 
 \subsubsection{Угрозы доступности, целостности, конфиденциальности данных}
-\textbf{Современный подход к информационной безопасности}
+Распределенные системы управления базами данных (СУРБД) отличаются от централизованных тем, что их работа организована на множестве удаленных узлов, 
+связанных между собой сетью. Такой подход обеспечивает расширение и масштабируемость сервисов, однако порождает специфичные угрозы доступности, 
+целостности и конфиденциальности информации. В этом разделе рассмотрим наиболее характерные угрозы, обусловленные именно распределенностью СУБД, 
+так как общие угрозы целостности и конфиденциальности СУБД были рассмотрены в 3 "Механизмы обеспечения целостности СУБД" и 4 "Механизмы обеспечения конфиденциальности в СУБД"  разделах соответственно, а также в подразделе 1.2 "Угрозы безопасности БД: общие и специфичные". \autocite{Tanenbaum}.
 
-Информационная безопасность - это защита информации и инфраструктуры с помощью различных средств и методов. Комплексный подход включает использование защитных механизмов на всех этапах жизненного цикла системы. При проектировании системы безопасности учитываются передовые тенденции, включая интрасети (Intranet). Защита WEB-сервиса, центрального элемента интрасетей, имеет первостепенное значение.
+\paragraph{Угрозы доступности:}
 
-\bigbreak
-\textbf{Угрозы СУБД}
+Доступность в распределенной СУБД подвержена специфичным проблемам, вызванным распределением данных и отсутствием единой физической среды:
 
-Распределённые системы управления базами данных (СУБД) представляют собой сложную инфраструктуру, которая подвержена различным угрозам безопасности. Эти угрозы могут иметь серьёзные последствия, включая потерю или искажение данных, нарушение конфиденциальности и доступности информации. В этом разделе мы рассмотрим некоторые из ключевых угроз безопасности, связанных с распределёнными СУБД \autocite{DistrDBThreats}.
-
-\textbf{Проблемы синхронизации}
-
-В распределённых СУБД данные хранятся на разных серверах или узлах. Каждый узел обрабатывает свои запросы и обновляет данные. Если эти обновления не синхронизируются должным образом между всеми узлами, это может привести к несоответствию данных. Например, один и тот же запрос, выполненный на разных узлах, может дать разные результаты.
-
-\textbf{Угрозы сетевой безопасности}
-
-Поскольку данные передаются по сети между различными узлами, они подвержены угрозам, таким как перехват данных, атаки "человек посередине" и другие виды сетевых атак. Это может привести к утечке конфиденциальной информации или к нарушению целостности данных.
-
-\textbf{Проблемы доступа и аутентификации}
-
-Управление доступом и аутентификация пользователей в распределённой среде может быть сложной задачей. Если злоумышленник может обойти механизмы аутентификации или контроля доступа, он может получить несанкционированный доступ к данным.
-
-\textbf{Отказ оборудования или сети}
-
-В распределённых СУБД отказ одного из узлов или линии связи между узлами может привести к потере доступа к данным. Это может привести к простоям в работе и потере важной информации.
-
-\textbf{Угрозы целостности данных}
-
-В распределённых СУБД данные часто реплицируются на нескольких серверах для обеспечения отказоустойчивости. Если процесс репликации нарушается, это может повлиять на целостность данных. Например, обновление может быть применено на одном сервере, но не на другом.
-
-\subsubsection{Механизмы противодействия угрозам}
-СУБД отличаются от других компонентов ИС специфичными угрозами, и главным их источником является
-сама природа баз данных. Известно, что основным средство общения с СУБД выступает язык SQL,
-являющийся мощным инструментом манипулирования данными. С его помощью, используя механизм правил, могут
-быть созданы сложные, трудно поддающиеся анализу цепочки действий, позволяющие не явным образом передавать
-право на выполнение определенных процедур тем, кто не имеет на это полномочий \autocite{DistrDBThreats}.
-
-В качестве примера можно привести несколько угроз, возникающих при использовании языка SQL: получение
-информации путем логических выводов, агрегирование данных, покушение на высокую доступность.
-
-Методы борьбы против получения информации путем логических выводов состоят в тщательном проектировании
-модели данных, иерархии привилегий и видимых пользователям представлений.
-
-Агрегирование данных состоит в получении новой информации путем комбинирования данных, полученным официальным
-путем. Причем информация, содержащаяся в скомбинированных данных, может иметь гриф более высокий, чем первичная информация.
-
-Методом борьбы с агрегированием может быть тщательное проектирование модели данных и максимально допустимое
-ограничение доступа пользователей к информации.
-
-Покушение на высокую доступность может быть реализовано, если пользователю-нарушителю доступны все возможности
-языка SQL. При этом он легко сможет заблокировать работу других пользователей. Поэтому, в целях борьбы с данным
-видом угроз, рекомендуется запрещать непосредственный SQL-доступ к базе данных, используя для этого серверы приложений \autocite{DistrDBThreats}.
-
-В распределённых СУБД необходимо передавать данные между узлами. 
-Поэтому, кроме перечисленных угроз, в них также реализуются угрозы, связанные с каналами связи.
-Защититься от них можно с помощью шифрования.
-
-В распределённых СУБД пользователи могут обращаться к разным серверам.
-Например, первый пользователь обращается к первому серверу БД и просит удалить некоторую строку, которая расположена на втором сервере.
-А в это время второй пользователь обращается ко второму серверу и просит прочитать эту строку.
-В таком случае может возникнуть ситуация, когда строка уже удалена, но второй пользователь её получил.
-Защищаться от этого необходимо с помощью распределённых транзакций.
-
-\bigbreak
-\textbf{Средства резервного копирования}
-
-Резервное копирование программ и данных необходимо проводить с целью минимизации потерь в случае отказов
-оборудования, либо сбоев в программном обеспечении ИС. Данная задача наиболее сложна именно в интрасетях
-с их распределенными ресурсами и неоднородностью, в которых работают компьютеры под управлением различных
-операционных систем. Учитывая клиент/серверный характер интрасетей функцию резервного копирования целесообразно
-также выделить в виде отдельного сервера (сервера архива).
-
-Распространение клиент/серверного подхода на процедуру резервного копирования информации и данных
-имеет ряд преимуществ по сравнению с традиционными методами. Они выражаются в следующем \autocite{DistrDBThreats}:
-\begin{itemize}
-    \item Администраторы рабочих групп освобождаются от необходимости согласования действий
-    и самой процедуры создания локальных резервных копий
-    \item Единообразие процедуры создания резервных копий в ИС
-    \item Возможность мониторинга процесса резервирования и диагностики возникших проблем
+\begin{itemize} 
+    \item \textbf{Отказ сетевых соединений.} Нарушения коммуникационных каналов между серверами могут привести к недоступности данных для части пользователей, даже если сами узлы продолжат корректно функционировать\autocite{Karpova2009}.
+    \item \textbf{Недоступность отдельных узлов и реплик данных.} При отказе отдельных серверов становятся недоступными большие сегменты распределенной базы данных или могут нарушаться процессы репликации и синхронизации данных \autocite{Tanenbaum}. 
+    \item \textbf{Эффекты каскадных отказов.} Распределенные транзакции при некорректной реализации процедур завершения могут приводить к каскадным простоям ряда узлов вследствие накопления ожиданий завершения транзакций или блокировок ресурсов \autocite{IntroBD2014}. 
 \end{itemize}
 
-Одним из способов обеспечения высокой доступности информации является создание резервных копий с возможностью
-ее хранения в двух местах: один экземпляр хранится поблизости от оригинала, а другой в удаленном безопасном месте.
+\paragraph{Угрозы целостности:}
 
+В распределенных системах поддержание целостности базы данных становится технически сложнее из-за географической и сетевой удаленности ее частей:
 
-\bigbreak
-\textbf{Обеспечение конфиденциальности данных}
+\begin{itemize} 
+    \item \textbf{Проблемы нарушения согласованности реплик.} Из-за сетевых сбоев или ошибки процессов репликации одна из реплик данных может оказаться в несогласованном состоянии с другими, что ведет к потере согласованности данных.Для противодействия этим угрозам применяются различные алгоритмы распределённого консенсуса и 
+    протоколы фиксации транзакций \autocite{Tanenbaum}.
+    \item \textbf{Ошибки механизмов завершения распределенных транзакций.} Если механизмы фиксации транзакций нарушаются, данные на одном из узлов могут оказаться в противоречивом (нецелостном) состоянии. 
+\end{itemize}
 
-В СУБД, как правило, используется произвольное управление доступом, когда владелец объекта передает
-права доступа к нему (привилегии) по своему усмотрению. При этом привилегии в СУБД можно подразделить на две
-категории: привилегии безопасности и привилегии доступа \autocite{DistrDBThreats}.
+\paragraph{Угрозы конфиденциальности:}
 
-Привилегии безопасности всегда выделяются конкретному пользователю и позволяют выполнять административные действия.
+Распределенность данных открывает дополнительные угрозы безопасности, связанные с каналами связи и механизмами распределённого доступа:
 
-Привилегии доступа определяют права доступа субъектов к определенным объектам.
+\begin{itemize} 
+    \item \textbf{Сетевая атака «человек посередине» (Man-in-the-middle)} Из-за передачи данных по сети, злоумышленник может перехватить или модифицировать трафик между распределенными узлами, что ведет к компрометации передаваемой информации  
+    \item \textbf{Нарушение аутентификации узлов.} Специфично для распределенных СУБД: при плохой защите аутентификации злоумышленник может выдавать себя за один из узлов СУБД, что ведет к получению несанкционированного доступа к информации и нарушению конфиденциальности. 
+\end{itemize}
 
-Специфическим механизмом управления доступом в СУБД являются представления. Они позволяют сделать
-видимыми для субъектов только те столбцы базовых таблиц, доступ к которым предоставлен субъектам администратором базы.
+\subsubsection{Механизмы противодействия угрозам}
 
-\bigbreak
-\textbf{Поддержание целостности}
+Для защиты распределенных систем управления базами данных от специфических угроз, перечисленных ранее в подразделе Угрозы доступности, целостности и конфиденциальности данных, применяются специализированные механизмы, обусловленные особенностями распределенного хранения данных и передачи информации по сети.
 
-Целостность данных не менее важна, чем конфиденциальность, ввиду того, что для баз данных, как и для
-ИС в целом, главными врагами являются не внешние нарушители, а ошибки оборудования, программ, администраторов и
-пользователей системы \autocite{DistrDBThreats}.
+\paragraph{Механизмы противодействия угрозам доступности:}
 
-С точки зрения пользователей СУБД, основными средствами поддержания целостности данных являются ограничения и правила.
+В распределенных СУБД особое внимание уделяется защите от отказов узлов и сбоев коммуникаций. С этой целью используются следующие меры:
 
-Ограничения могут относиться как к таблицам, так и к отдельным столбцам. Они накладываются владельцами
-таблицы и оказывают влияние на все операции с данными.
+\begin{itemize} 
+    \item \textbf{Тиражирование и репликация} — одна и та же информация размещается на нескольких узлах. В случае отказа отдельного узла пользователи получают доступ к данным на другом сервере. Для поддержки синхронизации и согласованности реплик используются распределенные транзакции и алгоритмы фиксации \autocite{Tanenbaum}.
+    \item \textbf{Кластеризация} — серверы объединяют в отказоустойчивые кластеры. Происходит автоматическое перенаправление запросов пользователей на здоровые узлы и предотвращение каскадных отказов.
+    \item \textbf{Средства мониторинга и восстановления узлов} — для оперативной реакции на отказы используются системы мониторинга, уведомляющие администратора и автоматические средства восстановления функционирования узлов после сбоев.
+\end{itemize}
 
-Правила позволяют вызывать выполнение заданных действий при определенных изменениях базы данных.
-В отличие от ограничений, являющихся лишь средствами контроля простых условий, правила позволяют
-создавать сколь угодно сложные соотношения между различными элементами базы данных.
+Подробнее про механизмы поддержания доступности (кластеризация, репликация, системы мониторинга и резервного копирования данных) написано в разделе «Механизмы, поддерживающие высокую готовность».
 
-\bigbreak
-\textbf{Обеспечение доступности данных}
+\paragraph{Механизмы противодействия угрозам целостности:}
 
-Доступность данных подразумевает обеспечение информационной системы средствами поддержания высокой
-доступности. Поддержание высокой доступности позволяет свести к минимуму возможные сбои аппаратного
-обеспечения, в частности носителей информации, а также ошибки обслуживающего персонала и программного
-обеспечения. В качестве мер поддержания высокой доступности может быть названа кластеризация сервера баз
-данных (выделение нескольких компьютеров, выполняющих общее приложение), а также тиражирование данных
-(хранение базы данных в различных местах) \autocite{DistrDBThreats}.
+Специфические меры для защиты распределенных баз данных от угроз целостности включают:
 
+\begin{itemize} 
+    \item \textbf{Механизмы распределенных транзакций} — для сохранения согласованности данных применяются алгоритмы двух- и трехфазной фиксации, гарантирующие атомарность и надежное завершение транзакций. Механизм транзакций описан в разделе «Механизмы обеспечения целостности СУБД».
+    \item \textbf{Контроль согласованности реплик (Consistency control)} — специальные механизмы и алгоритмы синхронизации реплик данных, периодически проверяющие целостность и идентичность данных между удаленными узлами.
+\end{itemize}
 
+\paragraph{Механизмы противодействия угрозам конфиденциальности:}
 
+Особенности распределенных систем требуют дополнительных механизмов защиты передаваемых данных:
+
+\begin{itemize} 
+    \item \textbf{Криптографическая защита сетевых каналов} — защита целостности и конфиденциальности сообщений между узлами организуется с помощью шифрования каналов (например TLS) и протоколов взаимной аутентификации узлов.
+    \item \textbf{Автоматическая взаимная аутентификация узлов} — средства идентификации и аутентификации, обеспечивающие автоматическую проверку подлинности узлов и исключающие возможность подмены серверов \cite{Karpova2009}.
+    \item \textbf{Изоляция критичных компонент распределенного приложения} — сегментирование сети, ограничение сетевого доступа к узлам, обработка конфиденциальных операций на узлах с ограниченным кругом доступа пользователей и приложений.
+\end{itemize}
+
+Механизмы защиты конфиденциальности и контроля доступа  описаны. в разделах «Механизмы обеспечения конфиденциальности в СУБД» и «Средства управления доступом».
 
 \subsection{Распределенная обработка данных}
 \paragraph{Понятие распределенной транзакции}~\\
@@ -1273,4 +1160,14 @@ OIDC расширяет OAuth 2.0 следующими основными воз
 \item \textbf{SAP HANA Cloud:} гибридная реляционная/SQL база данных.
 \item \textbf{MongoDB Atlas:} служба баз данных NoSQL.
 \end{itemize}
+
+\subsection{Алгоритмы консенсуса}
+
+\subsubsection{Проблема консенсуса в распределённых системах}
+
+
+\subsubsection{Raft Consensus Algorithm}
+
+
+
 	
