--- a/bibliography.bib
+++ b/bibliography.bib
@@ -65,8 +65,8 @@
 
 @online{DDBMSIndusEdition,
     url     = {https://www.tutorialspoint.com/distributed_dbms/distributed_dbms_databases.htm},
-    urldate = {2022-06-13}
-}
+    urldate = {2025-03-15}
+}z
 
 @online{bmstu,
     author  = {{Бомонка}},
@@ -78,7 +78,7 @@
 
 @online{dce,
     url     = {https://www.ibm.com/docs/en/cics-ts/5.3?topic=SSGMCP_5.3.0/com.ibm.cics.ts.doc/dfhtm/topics/dfhtm0a.html},
-    urldate = {2022-06-14}
+    urldate = {2025-03-15}
 }
 
 @book{WebServices,
@@ -86,6 +86,13 @@
     title   = {Web Services. Concepts, Architectures and Applications},
     year    = {2004},
     isbn    = {978-3-662-10876-5}
+}
+
+@book{Tanenbaum,
+    author  = {{Таненбаум Э., Стеен М.}},
+    title   = {Распределенные системы. Принципы и парадигмы},
+    year    = {2003},
+    isbn    = {5-272-00053-65-272-00053-6}
 }
 
 @online{infosec,
@@ -848,7 +855,7 @@
 @online{4studClntSrv,
 	title = {{Компоненты сетевого приложения. Клиент-серверное взаимодействие и роли серверов.}},
 	url = {http://www.4stud.info/networking/lecture5.html},
-	urldate = {2024-06-12}
+	urldate = {2025-03-15}
 }
 
 @article{DistrDBThreats,
