--- a/bibliography.bib
+++ b/bibliography.bib
@@ -88,6 +88,13 @@
     isbn    = {978-3-662-10876-5}
 }
 
+@book{Tanenbaum,
+    author  = {{Таненбаум Э., Стеен М.}},
+    title   = {Распределенные системы. Принципы и парадигмы},
+    year    = {2003},
+    isbn    = {5-272-00053-65-272-00053-6}
+}
+
 @online{infosec,
     author = {{В. Ю. Статьев, В.А. Тиньков}},
     title = {{Информационная безопасность распределенных информационных систем}},
