--- a/part/distributed.tex
+++ b/part/distributed.tex
@@ -1,19 +1,21 @@
 \section{Защита данных в распределенных системах}
+
+Существует два основных варианта организации базы данных в локальной сети.
+
+Первый вариант – системы распределенной обработки данных. Централизованная БД расположена на одной машине (сервере). К ней осуществляется параллельный доступ нескольких пользователей и приложений, находящихся на рабочих станциях, объединенных в вычислительную сеть. Централизованная организация данных позволяет облегчить обеспечение безопасности, целостности и непротиворечивости данных.
+
+Второй вариант – системы распределенных баз данных. БД распределена на нескольких компьютерах, объединенных в сеть. К БД возможен параллельный доступ нескольких пользователей и приложений, расположенных в узлах сети. \autocite{Sergeeva}
+
+В данном разделе мы рассмотрим основные аспекты и методы защиты данных в распределенных системах, учитывая специфику каждого из описанных выше подходов.
+
 \subsection{Распределенные вычислительные среды}
-Распределённая обработка данных - методика выполнения прикладных программ группой систем.
-При этом пользователь получает возможность работать с сетевыми службами и прикладными процессами,
-расположенными в нескольких взаимосвязанных абонентских системах. \autocite{Sergeeva}
 
-\paragraph{
-    Распределенная обработка информации в среде клиент-сервер.
-    Концепция распределенной вычислительной среды Distributed Computing Environment (DCE).
-    Распределенные базы данных в сетях ЭВМ
-} ~\\
+\textbf{Распределенная обработка информации в среде клиент-сервер.
+Концепция распределенной вычислительной среды Distributed Computing Environment (DCE).
+Распределенные базы данных в сетях ЭВМ}
 
-Компьютер (или программу), управляющий ресурсом, называют сервером этого ресурса (файлсервер, сервер базы данных,
-вычислительный сервер...). Клиент и сервер какого-либо ресурса могут находиться как в рамках одной вычислительной системы,
-так и на различных компьютерах, связанных сетью. Основной принцип технологии "клиент-сервер" заключается в разделении
-функций приложения на три группы \autocite{4studClntSrv}:
+Архитектура «клиент-сервер» подразумевает разделение функций между компонентами, которые могут выполняться на различных сетевых узлах.
+Разделение функций приложения на три группы \autocite{4studClntSrv}:
 \begin{itemize}
     \item ввод и отображение данных (взаимодействие с пользователем);
     \item прикладные функции, характерные для данной предметной области;
@@ -30,128 +32,57 @@
 Связь между компонентами осуществляется по определенным правилам, которые называют "протокол взаимодействия".
 Каждый из компонентов приложения при этом может работать на выделенном сервере (узле) или разделять ресурсы сервера
 с другими компонентами приложения. В связи с этим можно выделить следующие модели приложений:
-\begin{itemize}
-    \item двухзвенная модель (модель «клиент-сервер»)
-    \item трехзвенная модель (модель сервера приложений)
-    \item многозвенная модель
+
+\begin{itemize} 
+    \item \textbf{Двухзвенная модель} — разделение функций между двумя узлами. 
+    \item \textbf{Трехзвенная модель} — выделение для каждого из трех компонентов приложения своего сервера. 
+    \item \textbf{Многозвенная модель} — распределение функциональных компонентов по нескольким серверам и узлам сети. \autocite{Tanenbaum}
 \end{itemize}
 
-\textbf{Двухзвенная модель} позволяет распределить различным образом три компонента приложения между двумя узлами 
-\textbf{Трехзвенная модель} предполагает выделение для каждого из трех компонентов приложения свой сервер \autocite{4studClntSrv}.
-\textbf{Многозвенная модель} позволяет отдельным компонентам использовать ресурсы нескольких серверов, например,
-распределенные базы данных. Компанией Gartner Group, специализирующейся в области исследования информационных технологий,
-предложена следующая классификация двухзвенных моделей взаимодействия клиент-сервер \autocite{bmstu}
+\textbf{Двухзвенная структура}~\\
 
-\begin{figure}[h!]
-    \centering
-    \includegraphics[width=0.8\textwidth]{assets/dce.jpg}
-    \caption{Классификация двухзвенных моделей}
-\end{figure}
+Двухзвенная архитектура используется в клиент-серверных системах, где сервер отвечает
+на клиентские запросы напрямую и в полном объеме, при этом используя только
+собственные ресурсы. Т.е. сервер не вызывает сторонние сетевые приложения и не
+обращается к сторонним ресурсам для выполнения какой-либо части запроса. 
+Клиентская программа работает с данными через запросы к серверному ПО. Базовые функции приложения разделены между клиентом и сервером.
 
-\subsubsection{Двухзвенная структура}~\\
-В любой сети, построенной на современных сетевых технологиях, присутствуют элементы
-клиент-серверного взаимодействия,часто на основе двухзвенной архитектуры.
-
-\begin{figure}[h!]
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{assets/662}
     \caption{Двухзвенная архитектура}
 \end{figure}
 
-Двухзвенная архитектура используется в клиент-серверных системах, где сервер отвечает
-на клиентские запросы напрямую и в полном объеме, при этом используя только
-собственные ресурсы. Т.е. сервер не вызывает сторонние сетевые приложения и не
-обращается к сторонним ресурсам для выполнения какой-либо части запроса.
-
-\begin{figure}[h!]
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{assets/663}
     \caption{Типичный пример двухзвенной модели}
 \end{figure}~\\
 
-Клиентская программа работает с данными через запросы к серверному ПО. Базовые
-функции приложения разделены между клиентом и сервером.
+\textbf{Трехзвенная архитектура}~\\
 
-Плюсы:
-\begin{itemize}
-    \item Отсутствие дублирования кода программы-сервера программами-клиентами.
-    \item Так как все вычисления выполняются на сервере, то требования к компьютерам, на которых установлен клиент, снижаются.
-    \item Все данные хранятся на сервере, который, как правило, защищён гораздо лучше большинства клиентов. На сервере проще обеспечить контроль полномочий, чтобы разрешать доступ к данным только клиентам с соответствующими правами доступа.
-    \item Позволяет объединить различные клиенты. Использовать ресурсы одного сервера часто могут клиенты с разными аппаратными платформами, операционными системами и т. п.
-    \item Позволяет разгрузить сети за счёт того, что между сервером и клиентом передаются небольшие порции данных.
-\end{itemize}
-
-Минусы:
-\begin{itemize}
-    \item 	Бизнес логика приложений осталась в клиентском ПО. При любом изменении алгоритмов, надо обновлять пользовательское ПО на каждом клиенте.
-    \item Высокие требования к пропускной способности коммуникационных каналов с сервером, что препятствует использование клиентских станций иначе как в локальной сети.
-    \item Слабая защита данных от взлома, в особенности от недобросовестных пользователей системы.
-    \item Высокая сложность администрирования и настройки рабочих мест пользователей системы.
-    \item Необходимость использовать мощные ПК на клиентских местах.
-    \item Высокая сложность разработки системы из-за необходимости выполнять бизнес-логику и обеспечивать пользовательский интерфейс в одной программе.
-\end{itemize}
-
-\subsubsection{Трехзвенная архитектура}~\\
-
-Еще одна тенденция в клиент-серверных технологиях связана со все большим
-использованием распределенных вычислений. Они реализуются на основе модели сервера
-приложений, где сетевое приложение разделено на две и более частей, каждая из которых
+Модель сервера приложений, где сетевое приложение разделено на две и более частей, каждая из которых
 может выполняться на отдельном компьютере. Выделенные части приложения
 взаимодействуют друг с другом, обмениваясь сообщениями в заранее согласованном
 формате. В этом случае двухзвенная клиент-серверная архитектура становится
-трехзвенной.  На этой архитектуре построены большинство современных web-приложений.~\\
-
-\begin{figure}[h!]
-    \centering
-    \includegraphics[width=0.8\textwidth]{assets/664}
-    \caption{Трехзвенная архитектура}
-\end{figure}
+трехзвенной. ~\\
 
 Основным ее отличием от предыдущей архитектуры является физическое разделение
-программ, отвечающих за хранение данных (СУБД) от программ эти данные
-обрабатывающих. Такое разделение программных компонент позволяет оптимизировать
+программ, отвечающих за хранение данных (СУБД) от программ, 
+обрабатывающих эти данные. Такое разделение программных компонент позволяет оптимизировать
 нагрузки как на сетевое, так и на вычислительное оборудование комплекса.~\\
 
-\begin{figure}[h!]
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{assets/665}
     \caption{Типичный пример трехзвенной модели}
 \end{figure}
 
-Компоненты трехзвенной архитектуры, с точки зрения программного обеспечения
-реализуют определенные сервера БД, web-сервера и браузеры. Место любого из этих
-компонентов может занять программное обеспечение любого производителя.~\\
-
-Сервер приложений располагается на выделенном сервере приложений, выполняющем функции промежуточного ПО.~\\
-
-Плюсы:
-\begin{itemize}
-    \item Тонкий клиент.
-    \item Между клиентской программой и сервером приложения передается лишь минимально необходимый поток данных - аргументы вызываемых функций и возвращаемые от них значения.
-    \item Сервер приложения может быть запущен в одном или нескольких экземплярах на одном или нескольких компьютерах.
-    \item Дешевый трафик между сервером приложений и СУБД. Трафик между сервером приложений и СУБД может быть большим, однако это всегда трафик локальной сети, а их пропускная способность достаточно велика и дешева. В крайнем случае, всегда можно запустить СП и СУБД на одной машине, что автоматически сведет сетевой трафик к нулю.
-    \item Дешевле наращивать функциональность и обновлять ПО.
-\end{itemize}
-
-Минусы:
-\begin{itemize}
-    \item Более высокая сложность создания приложений.
-    \item Сложнее в разворачивании и администрировании.
-    \item Высокие требования к производительности серверов приложений и сервера базы данных, а, значит, и высокая стоимость серверного оборудования.
-    \item Высокие требования к скорости канала (сети) между сервером базы данных и серверами приложений.
-\end{itemize}
-
-\subparagraph{Отличия}~\\
-
-По сравнению с двухзвенной клиент-серверной архитектурой трёхуровневая архитектура
-обеспечивает, как правило, большую масштабируемость (за счёт горизонтальной
-масштабируемости сервера приложений и мультиплексирования соединений), большую
-конфигурируемость (за счёт изолированности уровней друг от друга). Реализация
-приложений, доступных из веб-браузера или из тонкого клиента, как правило,
-подразумевает развёртывание программного комплекса в трёхуровневой архитектуре. При
-этом обычно разработка трёхзвенных программных комплексов сложнее, чем для
-двухзвенных, также наличие дополнительного связующего программного обеспечения
-может налагать дополнительные издержки в администрировании таких комплексов.~\\
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{assets/664}
+    \caption{Трехзвенная архитектура}
+\end{figure}
 
 DCE (Distributed Computing Environment)~--- это система программного обеспечения,
 предназначенная для разработки программ, использующих распределённые вычисления. \autocite{dce}
@@ -160,7 +91,7 @@ DCE (Distributed Computing Environment)~--- это система програм
     \item Удалённый вызов процедур (RPC, remote procedure call)~--- DCE имеет собственную систему RPC (DCE/RPC). Как и любой RPC, используется для вызова процедур на удалённом компьютере.
     \item Служба каталогов (Directory Service)~--- центральное хранилище информации о ресурсах в распределённой системе. К ним относятся пользователи, компьютера и службы RPC, а также их атрибуты (свойства).
     \item Служба безопасности (Security Service)~--- служба, отвечающая за защиту данных при передаче по сети (с помощью шифрования, например), контроль доступа к вычислительным ресурсам, и т. д.
-    \item Служба синхронизации времени (Time Service)~--- как понятно из названия, используются для синхронизации времени на узлах системы.
+    \item Служба синхронизации времени (Time Service)~--- используются для синхронизации времени на узлах системы.
     \item Файловая служба (File Service)~--- позволяет пользователям получать доступ к файлам, хранящимся на файловом сервере.
     \item Threads~--- реализует многопоточность, если она не реализована на уровне ОС.
 \end{itemize}
