Change content of subsection 6.3.1

--- a/part/distributed.tex
+++ b/part/distributed.tex
@@ -198,16 +198,24 @@ DCE (Distributed Computing Environment)~--- это система програм
 
 \subsection{Распределенная обработка данных}
 
-\paragraph{Понятие распределенной транзакции}~\\
+\subsubsection{Понятие распределенной транзакции}
 
-Если данные хранятся в одной базе данных, то транзакция к ней рассматривается как локальная.
-В распределенных базах транзакция, выполнение которой заключается в обновлении данных на нескольких узлах сети,
-называется глобальной или \textbf{распределенной транзакцией}.
+Распределенные транзакции — это транзакции, выполнение которых происходит сразу на нескольких сетевых узлах (серверах), часто расположенных географически удаленно друг от друга. Иначе говоря, распределенная транзакция представляет собой единый механизм взаимодействия с несколькими узлами СУБД одновременно, обеспечивающий атомарность и целостность операций, даже при удаленном расположении данных.
+Основная цель распределенных транзакций заключается в обеспечении согласованности данных на всех узлах в любой момент времени (включая ситуации сбоев или отказов). Формально распределённая транзакция должна удовлетворять требованиям модели ACID (атомарность, согласованность, изолированность, долговечность), что влечёт за собой необходимость применения специальных методов, таких как протоколы фиксации \autocite{Tanenbaum}.
 
-Внешне выполнение распределенной транзакции выглядит как обработка транзакции к локальной базе данных.
-Тем не менее распределенная транзакция включает в себя несколько локальных транзакций, каждая из которых
-завершается двумя путями — фиксируется или прерывается. Распределенная транзакция фиксируется только в том случае,
-когда зафиксированы все локальные транзакции, ее составляющие.
+По завершении распределённой транзакции: 
+
+\begin{itemize} 
+    \item Либо успешно фиксируются изменения на всех затронутых узлах (commit). 
+    \item Либо изменения полностью блокируются (откат или rollback), не оставляя следов частичных обновлений 
+\end{itemize}
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.8\textwidth]{assets/distributed/Transaction.png}
+    \caption{Понятие распределенной транзакции}
+	\label{ansi_transactions}
+\end{figure}
 
 \subsubsection{Модель обработки транзакций} ~\\
 
