Changing the content 6.3.2 and deleting repetitions with replacing them with links to other sections

--- a/part/distributed.tex
+++ b/part/distributed.tex
@@ -200,8 +200,13 @@ DCE (Distributed Computing Environment)~--- это система програм
 
 \subsubsection{Понятие распределенной транзакции}
 
-Распределенные транзакции — это транзакции, выполнение которых происходит сразу на нескольких сетевых узлах (серверах), часто расположенных географически удаленно друг от друга. Иначе говоря, распределенная транзакция представляет собой единый механизм взаимодействия с несколькими узлами СУБД одновременно, обеспечивающий атомарность и целостность операций, даже при удаленном расположении данных.
-Основная цель распределенных транзакций заключается в обеспечении согласованности данных на всех узлах в любой момент времени (включая ситуации сбоев или отказов). Формально распределённая транзакция должна удовлетворять требованиям модели ACID (атомарность, согласованность, изолированность, долговечность), что влечёт за собой необходимость применения специальных методов, таких как протоколы фиксации \autocite{Tanenbaum}.
+Распределенные транзакции — это транзакции, выполнение которых происходит сразу на нескольких сетевых узлах (серверах), часто расположенных географически 
+удаленно друг от друга. Иначе говоря, распределенная транзакция представляет собой единый механизм взаимодействия с несколькими узлами СУБД одновременно, 
+обеспечивающий атомарность и целостность операций, даже при удаленном расположении данных.
+
+Основная цель распределенных транзакций заключается в обеспечении согласованности данных на всех узлах в любой момент времени (включая ситуации сбоев или отказов). 
+Формально распределённая транзакция должна удовлетворять требованиям модели ACID (атомарность, согласованность, изолированность, долговечность), что влечёт за собой 
+необходимость применения специальных методов, таких как протоколы фиксации \autocite{Tanenbaum}.
 
 По завершении распределённой транзакции: 
 
@@ -214,50 +219,22 @@ DCE (Distributed Computing Environment)~--- это система програм
     \centering
     \includegraphics[width=0.8\textwidth]{assets/distributed/Transaction.png}
     \caption{Понятие распределенной транзакции}
-	\label{ansi_transactions}
 \end{figure}
 
 \subsubsection{Модель обработки транзакций} ~\\
 
-В стандарте ANSI/ISO SQL определены модель транзакций и функции операторов COMMIT и ROLLBACK. \autocite{AnsiSqlTrans}
-Стандарт определяет, что транзакция начинается с первого SQL-оператора, инициируемого пользователем или содержащегося
-в программе. Все последующие SQL-операторы составляют тело транзакции. Транзакция завершается одним из четырех
-возможных путей \autoref{ansi_transactions}
-\begin{itemize}
-    \item оператор COMMIT означает успешное завершение транзакции; его использование делает постоянными изменения,
-    внесенные в базу данных в рамках текущей транзакции
-    \item оператор ROLLBACK прерывает транзакцию, отменяя изменения, сделанные в базе данных в рамках
-    этой транзакции; новая транзакция начинается непосредственно после использования ROLLBACK
-    \item успешное завершение программы, в которой была инициирована текущая транзакция,
-    означает успешное завершение транзакции (как будто был использован оператор COMMIT)
-    \item ошибочное завершение программы прерывает транзакцию (как будто был использован оператор ROLLBACK)
-\end{itemize}
+Распределенная транзакция выполняет операции над данными, расположенными на нескольких сетевых узлах (серверах) одновременно. 
+В распределенных СУБД обработка транзакций значительно усложняется, так как требуется обеспечить согласованность изменений на 
+разных географически удаленных узлах базы данных, обеспечить атомарность и гарантировать целостность данных даже в случае сетевых 
+сбоев или отказов отдельных серверов \autocite{Tanenbaum}.
 
-\begin{figure}[h!]
-    \centering
-    \includegraphics[width=0.8\textwidth]{assets/distributed/transactions.jpg}
-    \caption{Модель транзакций ANSI/ISO}
-	\label{ansi_transactions}
-\end{figure}
+Для обеспечения выполнения этих требований распределенные СУБД используют протоколы фиксации, которые будут описаны далее в разделе 
+"Протоколы фиксации". Эти протоколы позволяет всем серверам, участвующим в транзакции, либо совместно подтвердить (зафиксировать), 
+либо совместно отказаться (откатить) от ее выполнения. Такой подход позволяет сохранить принцип атомарности и согласованности транзакции 
+вне зависимости от условий физического размещения данных и особенностей сетевой инфраструктуры.
 
-Точки сохранения применяются, как правило, в протяженных транзакциях и позволяют разделить транзакцию на несколько
-небольших осмысленных фрагментов. Пользователь может зафиксировать работу в любой точке транзакции с тем,
-чтобы выполнить ее откат к состоянию, соответствующему этой точке.
-
-Откат и фиксация транзакций становятся возможными благодаря журналу транзакций. Он используется следующим образом.
-Известно, что все операции над реляционной базой данных суть операции над строками таблиц. Следовательно,
-для обеспечения отката таблиц к предыдущим состояниям достаточно хранить не состояния таблицы, а лишь те
-ее строки, которые подверглись изменениям.
-
-При выполнении любого оператора SQL, который вносит изменения в базу данных, СУБД автоматически заносит
-очередную запись в журнал транзакций. Запись состоит из двух компонентов: первый - это состояние строки до
-внесения изменений, второй - ее же состояние после внесения изменений. Только после записи в журнал транзакций
-СУБД действительно вносит изменения в базу данных. Если после данного оператора SQL был выполнен оператор
-COMMIT, то в журнале транзакций делается отметка о завершении текущей транзакции. Если же после
-оператора SQL следовал оператор ROLLBACK, то СУБД просматривает журнал транзакций и отыскивает записи,
-отражающие состояние измененных строк до внесения изменений. Используя их, СУБД восстанавливает те
-строки в таблицах базы данных, которые были изменены текущей транзакцией, - таким образом
-аннулируются все изменения в базе данных.
+Подробности об основных принципах обработки транзакций, журналирования, операциях фиксации и отката в контексте СУБД можно посмотреть 
+в разделах «Механизмы обеспечения целостности СУБД» и "Механизмы, поддерживающие высокую готовность".
 
 \subsubsection{Мониторы обработки транзакций}~\\
 
